--- a/style.css
+++ b/style.css
@@ -9,7 +9,19 @@
 }
 /* sniff himself */
 
-.drop{
-  r:30px;
+.drop {
+  r: 30px;
   fill: red;
+}
+
+.hidden {
+  display: none;
+}
+
+#button,
+#water,
+#light,
+#power,
+#heat {
+  cursor: pointer;
 }
