--- a/style.css
+++ b/style.css
@@ -2,11 +2,9 @@
   /* padding: 0;
   margin: 0; */
   box-sizing: border-box;
+  background-color: #f2e2ce;
 }
 
-#mainSvg {
-  outline: 1px solid red;
-}
 /* sniff himself */
 
 .drop {
@@ -18,10 +16,33 @@
   display: none;
 }
 
+/* Game start buttons and animations */
 #button,
 #water,
 #light,
 #power,
 #heat {
   cursor: pointer;
+}
+
+.fadeIn {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeOut {
+  opacity: 1;
+  animation: fadeOut 0.3s ease-out forwards;
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0.5;
+  }
 }
