--- a/style.css
+++ b/style.css
@@ -24,3 +24,14 @@
 #arrowLeft,#arrowRight{
   fill:rgba(255, 0, 0, 0.358)
 }
+
+#electricity,#heat,#light,#water{
+  width: 0;
+}
+
+.points{
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 1.5em;
+}
