--- a/style.css
+++ b/style.css
@@ -21,3 +21,33 @@
 #snifcontainer {
   display: none;
 }
+
+.drop {
+  height: 50px;
+  width: 50px;
+  fill: red;
+}
+
+#arrows {
+  transform: translateY(54em) scale(0.5) translateX(5em);
+  z-index: 5;
+}
+
+#arrowLeft,
+#arrowRight {
+  fill: rgba(255, 0, 0, 0.358);
+}
+
+#electricity,
+#heat,
+#light,
+#water {
+  width: 0;
+}
+
+.points {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  font-size: 1.5em;
+}
