--- a/style.css
+++ b/style.css
@@ -7,31 +7,50 @@
 #mainSvg {
   outline: 1px solid red;
 }
-
 /* sniff himself */
 
 .drop {
-  height: 50px;
-  width: 50px;
+  r: 30px;
   fill: red;
 }
 
-#arrows{
-  transform: translateY(54em) scale(.5) translateX(5em);
+.hidden {
+  display: none;
+}
+
+#snifcontainer {
+  display: none;
+}
+
+
+
+#arrows {
+  transform: translateY(54em) scale(0.5) translateX(5em);
   z-index: 5;
 }
 
-#arrowLeft,#arrowRight{
-  fill:rgba(255, 0, 0, 0.358)
+#arrowLeft,
+#arrowRight {
+  fill: rgba(255, 0, 0, 0.358);
 }
 
-#electricity,#heat,#light,#water{
+#electricity,
+#heat,
+#light,
+#water {
   width: 0;
 }
 
-.points{
+.points {
   position: absolute;
   top: 5%;
   right: 5%;
+  font-size: 1.5em;
+}
+
+.highPoints{
+  position: absolute;
+  top: 5%;
+  right: 50%;
   font-size: 1.5em;
 }
