--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   /* padding: 0;
   margin: 0; */
   box-sizing: border-box;
+}
+
+body,
+html {
   background-color: #f2e2ce;
 }
 
@@ -33,11 +37,36 @@
   width: 0;
 }
 
-.points {
+.points,
+.highPoints {
+  background-color: rgba(95, 158, 160, 0.281);
+  padding: 0.5em 1em;
+  font-size: 2.5em;
+  border-radius: 50px;
+}
+
+.highScoreBtn {
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  border: none;
+  background-color: rgb(214, 168, 178);
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  margin: 0 0.5em;
+  font-size: 0.6em;
+}
+
+.pointsFlex {
   position: absolute;
-  top: 5%;
-  right: 5%;
-  font-size: 1.5em;
+  width: 68%;
+  top: 2%;
+  right: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 .drop {
@@ -76,6 +105,6 @@
 
 @keyframes fadeOut {
   to {
-    opacity: 0.5;
+    opacity: 0;
   }
 }
