--- a/style.css
+++ b/style.css
@@ -4,25 +4,21 @@
   box-sizing: border-box;
 }
 
-#mainSvg {
-  outline: 1px solid red;
+body,
+html {
+  background-color: #f2e2ce;
 }
+
 /* sniff himself */
-
-.drop {
-  r: 30px;
-  fill: red;
-}
-
-.hidden {
-  display: none;
-}
-
 #snifcontainer {
   display: none;
 }
 
-
+.drop {
+  height: 50px;
+  width: 50px;
+  fill: red;
+}
 
 #arrows {
   transform: translateY(54em) scale(0.5) translateX(5em);
@@ -34,28 +30,81 @@
   fill: rgba(255, 0, 0, 0.358);
 }
 
-#electricity,
+#power,
 #heat,
 #light,
 #water {
   width: 0;
 }
 
-.points {
-  position: absolute;
-  top: 5%;
-  right: 5%;
-  font-size: 1.5em;
+.points,
+.highPoints {
+  background-color: rgba(95, 158, 160, 0.281);
+  padding: 0.5em 1em;
+  font-size: 2.5em;
+  border-radius: 50px;
 }
 
-.highPoints{
-  position: absolute;
-  top: 5%;
-  right: 50%;
-  font-size: 1.5em;
+.highScoreBtn {
+  cursor: pointer;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  border: none;
+  background-color: rgb(214, 168, 178);
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  margin: 0 0.5em;
+  font-size: 0.6em;
 }
 
-#sprites{
-  height: 1000;
-  width: 1000;
+.pointsFlex {
+  position: absolute;
+  width: 68%;
+  top: 2%;
+  right: 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  color: white;
+}
+
+.drop {
+  r: 30px;
+  fill: red;
+}
+
+.hidden {
+  display: none;
+}
+
+/* Game start buttons and animations */
+#button-start,
+#water-bg,
+#light-bg,
+#power-bg,
+#heat-bg {
+  cursor: pointer;
+}
+
+.fadeIn {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-out forwards;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeOut {
+  opacity: 1;
+  animation: fadeOut 0.3s ease-out forwards;
+}
+
+@keyframes fadeOut {
+  to {
+    opacity: 0;
+  }
 }
