--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ html {
 #heat-bg {
   cursor: pointer;
 }
+#questionMark{
+cursor: pointer;
+}
+#questionMark:hover{
+  height: 140px;
+  transition: all .3s ease;
+}
 
 .fadeIn {
   opacity: 0;
@@ -106,5 +113,18 @@ html {
 @keyframes fadeOut {
   to {
     opacity: 0;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .points,
+  .highPoints {
+    padding: 0.5em 1em;
+    font-size: 1.5em;
+  }
+
+  .highScoreBtn {
+    padding: 0.2em 0.5em;
+    font-size: 0.8em;
   }
 }
